--- a/11/styles/styles.css
+++ b/11/styles/styles.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: 'PT Sans';
   src: url('../fonts/ptsans-400.woff2') format('woff2');
@@ -76,7 +75,7 @@ ul {
 
 .logo {
   width: 140px;
-  height: auto;
+  height: 73px;
   margin-bottom: -5px;
   z-index: 1;
 }
@@ -110,16 +109,35 @@ ul {
   max-width: 500px;
   min-height: 68px;
   margin: 0;
+  margin-top: -5px;
   margin-left: 27px;
   padding: 0;
 }
 
 .navigation-user {
+  position: relative;
   min-width: 268px;
   margin-left: auto;
+  margin-top: 0;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+}
+
+.navigation-user .navigation-item:nth-child(1) {
+  position: absolute;
+  left: 0;
+}
+
+.navigation-user .navigation-item:nth-child(2) {
+  position: absolute;
+  left: 44px;
+}
+
+.navigation-user .navigation-item:nth-child(3) {
+  position: absolute;
+  top: 14px;
+  left: 108px;
 }
 
 .navigation-link {
@@ -149,8 +167,9 @@ ul {
 }
 
 .navigation-button {
-  padding: 8px 35px;
-  margin-left: 20px;
+  display: block;
+  width: 160px;
+  padding: 8px;
   background-color: #756157;
   border-radius: 4px;
   font-family: 'PT Sans', sans-serif;
@@ -199,8 +218,8 @@ ul {
 
 .favourite-counter {
   position: absolute;
-  top: 10px;
-  right: 5px;
+  top: 11px;
+  right: 4px;
   background-color: #7DB54F;
   border-radius: 50%;
   width: 20px;
@@ -221,8 +240,8 @@ ul {
   background-size: 100% auto;
   background-repeat: no-repeat;
   position: relative;
-  min-height: 481px;
-  margin-top: -3px;
+  min-height: 485px;
+  margin-top: -4px;
 }
 
 .hero::after {
@@ -245,11 +264,11 @@ ul {
   height: 352px;
   left: 31%;
   right: 31%;
-  top: 10%;
-  bottom: 48%;
+  top: 51px;
 }
 
 .hero-description {
+  margin-top: 0;
   background-color: #FFFFFF;
   min-height: 282px;
   padding: 69px 0;
@@ -456,7 +475,7 @@ ul {
 .features-item:nth-child(3) {
   background: url('../images/souvenirs.svg');
   background-position: center top 80px;
-  background-size: 75px 72px;
+  background-size: 65px 75px;
   background-repeat: no-repeat;
   background-color: rgba(131, 179, 211, 0.12);
 }
@@ -574,6 +593,7 @@ section.search {
 }
 
 .subscribe-title{
+  margin-top: 24px;
   font-family: 'PT Sans', sans-serif;
   font-weight: 700;
   font-size: 30px;
@@ -584,7 +604,7 @@ section.search {
 }
 
 .subscribe-description {
-  margin-top: -5px;
+  margin-top: -4px;
   font-family: 'PT Sans', sans-serif;
   font-weight: 400;
   font-size: 22px;
@@ -603,9 +623,9 @@ section.search {
 }
 
 .email input {
-  width: 449px;
+  width: 452px;
   height: 52px;
-  padding: 12px 17px;
+  padding: 12px 19px;
   border-radius: 4px 0 0 4px;
   border-style: none;
   background-color: #F2F2F2;
@@ -684,7 +704,7 @@ section.search {
 }
 
 .social {
-  width: 140px;
+  min-width: 140px;
   min-height: 40px;
 }
 
@@ -741,6 +761,10 @@ section.search {
 
 .link-phone:active {
   color: #7561574D;
+}
+
+.about-text {
+  min-width: 115px;
 }
 
 .about-text:hover svg {
@@ -930,6 +954,7 @@ fieldset {
       -ms-flex-align: center;
           align-items: center;
   gap: 16px;
+  width: 150px;
 }
 
 
@@ -939,7 +964,7 @@ fieldset {
           appearance: none;
   background-color: #FFFFFF;
   border-radius: 4px;
-  width: 20px;
+  min-width: 20px;
   height: 20px;
   margin: 0;
 }
@@ -960,7 +985,7 @@ fieldset {
           appearance: none;
   background-color: #FFFFFF;
   border-radius: 50%;
-  width: 20px;
+  min-width: 20px;
   height: 20px;
   margin: 0;
 }
@@ -1108,6 +1133,35 @@ fieldset {
   padding-left: 17px;
 }
 
+.cost-min {
+  margin-right: 2px;
+  border-radius: 4px 0 0 4px;
+  border: 2px solid #FFFFFF;
+}
+
+.cost-min:focus {
+  border-radius: 4px 0 0 4px;
+  outline: none;
+  border: 3px solid #83B3D3;
+}
+
+.cost-max {
+  border-radius: 0 4px 4px 0;
+  border: 2px solid #FFFFFF;
+}
+
+.cost-max:focus {
+  outline: none;
+  border-radius: 0 4px 4px 0;
+  border: 3px solid #83B3D3;
+}
+
+.filter-range input[type="number"]::-webkit-outer-spin-button,
+.filter-range input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .catalog {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1134,12 +1188,14 @@ fieldset {
       -ms-flex-align: center;
           align-items: center;
   width: 1060px;
-  height: 49px;
+  min-height: 49px;
   padding: 0;
-  margin-bottom: 40px;
+  margin-bottom: 6px;
 }
 
 .found {
+  margin-top: 7px;
+  min-width: 338px;
   font-family: 'PT Sans', sans-serif;
   font-weight: 700;
   font-size: 30px;
@@ -1149,10 +1205,12 @@ fieldset {
 }
 
 .select-control {
-  margin-left: 150px;
+  margin-top: -19px;
+  padding-left: 14px;
+  margin-left: 130px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  width: 292px;
+  min-width: 292px;
   height: 49px;
   border: 2px solid #e5e5e5;
   border-radius: 4px;
@@ -1188,6 +1246,7 @@ fieldset {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   gap: 8px;
+  margin-top: -19px;
 }
 
 .button-card {
@@ -1220,6 +1279,7 @@ fieldset {
   border-radius: 4px;
   border: 2px solid #000;
 }
+
 .button-slide {
   background: url('../images/link-slide.svg');
   background-repeat: no-repeat;
@@ -1291,7 +1351,9 @@ fieldset {
   padding: 0;
   width: 1060px;
   margin: 0;
-  margin-bottom: 80px;
+  padding-bottom: 38px;
+  margin-top: 18px;
+  border-bottom: 2px solid #E6E6E6;
 }
 
 .hotel-card {
@@ -1313,7 +1375,16 @@ fieldset {
   min-height: 438px;
   word-break: break-all;
   margin-top: -4px;
-  margin-left: -4px;
+  margin-left: -1px;
+}
+
+.hotel-card:nth-child(4) {
+  margin-top: -2px;
+}
+
+.hotel-card-image {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .hotel-card > *:nth-child(1) {
@@ -1380,6 +1451,7 @@ fieldset {
   color: #000000;
   width: 300px;
   margin: 0;
+  margin-top: -3px;
 }
 
 .hotel-card-type {
@@ -1391,6 +1463,7 @@ fieldset {
   line-height: 21px;
   color: #333333;
   margin: 0;
+  margin-top: -1px;
 }
 
 .hotel-card-price {
@@ -1403,6 +1476,7 @@ fieldset {
   text-align: right;
   color: #333333;
   margin: 0;
+  margin-top: -1px;
 }
 
 .button-about {
@@ -1538,7 +1612,7 @@ fieldset {
       flex-wrap: wrap;
   gap: 8px;
   padding: 0;
-  margin-top: -4px;
+  margin-top: 39px;
   width: 1060px;
   min-height: 60px;
 }
@@ -1580,8 +1654,8 @@ fieldset {
 
 .pagination-link {
   display: inline-block;
-  width: inherit;
-  height: inherit;
+  min-width: 60px;
+  min-height: 60px;
   padding: 12px;
   font-family: 'PT Sans',sans-serif;
   font-weight: 700;
